--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "antd": "^5.18.3",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.24.1"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
@@ -24,8 +25,8 @@
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
+    "react-helmet": "^6.1.0",
     "typescript": "^5.2.2",
-    "vite": "^5.3.1",
-    "react-helmet": "^6.1.0"
+    "vite": "^5.3.1"
   }
 }
